fixed issue with pre tag not scrolling on smaller screens

--- a/stylesheets/sass/main.scss
+++ b/stylesheets/sass/main.scss
@@ -5,10 +5,6 @@ $testing: false;
     @if ($testing) {
         border: 3px solid $colour;
     }
-    
-}
-%background {
-    
 }
 
 :root {
@@ -234,6 +230,9 @@ main {
     
     @include testing(red);
     
+    pre {
+        max-width: 100vw;
+    }
     section {
         position: absolute;
         top: 0px;
